# summia

./: .gitignore  Cargo.toml  build.rs
src/: main.rs  resample.rs  whisper.rs
src/audio/: capture.rs  linux.rs  macos.rs  mod.rs
src/summary/: llama_cpp.rs  mlx.rs  mod.rs
