[package]
name = "summia"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ctrlc = "3.5.1"
hound = "3.5.1"
thiserror = "2.0.18"
serde = { version = "1.0", features = ["derive"] }
aec3 = "0.1.4"

# MLX backend (macOS Apple Silicon) - HTTP client
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
reqwest = { version = "0.13.1", features = ["blocking", "json"] }

# ScreenCaptureKit for system audio capture (macOS only)
[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "1.5.0"
fluidaudio-rs = "0.1.0"

# llama.cpp backend (Linux, Windows, Intel Mac)
[target.'cfg(not(all(target_os = "macos", target_arch = "aarch64")))'.dependencies]
llama-cpp-2 = "0.1.132"
cpal = "0.17.1"

